--- a/myunisite/MyUnicorn.html
+++ b/myunisite/MyUnicorn.html
@@ -88,6 +88,10 @@
 
 
 <style>
+body {
+  background: url(myunisite\Unicorn\img\background.png) repeat;    
+
+  }
 .align-items-stretch {
     align-items: stretch!important;
 }
@@ -113,14 +117,16 @@
 }
 .contact .info {
     padding: 30px;
-    background: #fff;
+    background: url(C:\Users\whitegenesys\Desktop\test3\myunisite\Unicorn\img\background.png);    
+
     width: 100%;
     box-shadow: 0 0 24px 0 rgba(0, 0, 0, 0.12);
 }
 .contact .php-email-form {
     width: 100%;
     padding: 30px;
-    background: #fff;
+    background: url(C:\Users\whitegenesys\Desktop\test3\myunisite\Unicorn\img\background.png);    
+
     box-shadow: 0 0 24px 0 rgba(0, 0, 0, 0.12);
 }
 form {
