--- a/myunisite/test.html
+++ b/myunisite/test.html
@@ -16,40 +16,11 @@
         <link href="https://fonts.googleapis.com/css2?family=Courgette&display=swap" rel="stylesheet">
         <!-- Template Main CSS File -->
         <link href="assets/css/style.css" rel="stylesheet">
-        <style>
-            body {
-                background-image: url('./Unicorn/img/background.png');
-            }    
-            .votre-header {
-                background-color: #c55394;
-                color: white;
-            }
-            .courgette-regular {
-                font-family: "Courgette", cursive;
-                font-weight: 400;
-                font-style: normal;
-            }
-            .image-container {
-            position: relative;
-            width: 100%;
-            max-width: 600px; /* Ajustez la largeur maximale selon vos besoins */
-            margin: auto;
-            }
-            .overlay-text {
-            position: absolute;
-            top: 35%;
-            left: 50%;
-            transform: translate(-50%, -50%);
-            color: #c55394;
-            font-size: 24px; /* Ajustez la taille de police selon vos besoins */
-            text-align: center;
-            }
-        </style>
 </head>
 <body>
 <header class="d-flex flex-wrap justify-content-center py-3 mb-4 border-bottom votre-header">
     <a href="main.html" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto link-body-emphasis text-decoration-none courgette-regular">
-      <span class="fs-4" style="color: white;">MyUnicorn</span>
+      <span class="fs-4 pl-2" style="color: white;">MyUnicorn</span>
     </a>
 
     <ul class="nav nav-pills ">
@@ -62,9 +33,42 @@
     <img src="rainbow.png" alt="Image" style="width: 100%; height: auto;">
     <div class="overlay-text courgette-regular"><h2>Un jour, une licorne</h2></div>
 </div>
-<footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top votre-header justify-content-end">
-    <div class="col-md-4 d-flex align-items-center ">
-      <span class="mb-3 mb-md-0 text-body-white ">© 2023 Company, Inc</span>
+<section id="contact" class="contact">
+    <div class="container">
+
+        <div class="col-lg-10 d-flex align-items-stretch justify-content-center">
+          <div class="info">
+            <div class="address">
+              <i class="bi bi-geo-alt"></i>
+              <h4>Le principe</h4>
+              <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. In dictum dapibus ante, eu aliquam ante euismod eleifend. Ut malesuada augue ut luctus pellentesque. Aenean id varius ipsum. Nunc malesuada ex ut ipsum interdum vestibulum. Integer facilisis finibus orci, sit amet pretium diam placerat vitae. Nunc auctor tincidunt mollis. Nullam quis turpis sed lorem elementum semper eget semper risus. In nec mauris aliquam, congue metus euismod, cursus leo. Vivamus laoreet commodo leo, ut cursus justo blandit in. Aenean pretium mi a auctor pulvinar. Mauris sodales sollicitudin sodales. Sed mollis sed lectus id facilisis. Quisque pharetra a purus eget porttitor. Proin rhoncus risus non mauris iaculis sodales. Pellentesque euismod dui erat, non sodales ipsum sollicitudin sed.
+
+                Donec nisi eros, luctus id pretium eget, consequat elementum risus. Fusce eleifend lacinia orci eu iaculis. Vestibulum vestibulum justo quis commodo congue. Aliquam purus leo, dictum in nisl at, pellentesque bibendum mi. Nulla convallis mi eget nisl convallis dictum. Vestibulum a massa lacus. Aenean quis enim diam.</p>
+            </div>
+
+            <div class="email">
+              <i class="bi bi-envelope"></i>
+              <h4>Nos licornes</h4>
+              <div class="images-containers">
+                <img src="./Unicorn/img/unicorns/photo1.jpg" alt="Image 1">
+                <img src="./Unicorn/img/unicorns/photo2.jpg" alt="Image 2">
+                <img src="./Unicorn/img/unicorns/photo3.jpg" alt="Image 3">
+                <img src="./Unicorn/img/unicorns/photo4.jpg" alt="Image 4">
+              </div>
+            </div>
+
+            <div class="trouver">
+              <i class="bi bi-phone"></i>
+              <h4>Nous trouver</h4>
+              <p>+000000000</p>
+            </div>
+
+            <iframe src="https://www.google.com/maps/embed?pb=!1m10!1m8!1m3!1d695.790126819438!2d4.836040636805255!3d45.76797345299229!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sfr!2sfr!4v1709568966158!5m2!1sfr!2sfr" width="600" height="400" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+    </div>
+  </section>
+<footer class="d-flex flex-wrap justify-content-end align-items-center py-3 my-4 border-top votre-header">
+    <div class="col-md-4 d-flex align-items-center justify-content-end">
+      <span class="mb-3 mb-md-0 text-body-white p-2 ">© 2023 Company, Inc</span>
     </div>
 </footer>
 </body>
